--- a/main.html
+++ b/main.html
@@ -8,6 +8,61 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div>
+			<label for="name">Name*</label>
+			<input type="text" id="name" name="name" required>
+		</div>
+		<div>
+			<label for="email">Email*</label>
+			<input type="email" id="email" name="email" required>
+		</div>
+		<div>
+			<label for="gender">Gender*</label>
+			<div>
+				<input type="radio" id="male" name="gender" value="male"required>
+				<label for="male">Male</label>
+			</div>
+			<div>
+				<input type="radio" id="female" name="gender"value="female"required>
+				<label for="female">Female</label>
+			</div>
+			<div>
+				<input type="radio" id="other" name="other"value="other"required>
+				<label for="other">Other</label>
+				
+			</div>
+		</div>
+		<div>
+			<label for="laptop">Laptop Brand</label>
+			<select id="laptop" name="laptop">
+				<option value="apple">Apple</option>
+				<option value="samsung">Samsung</option>
+				<option value="oneplus">Oneplus</option>
+				<option value="oppo">Oppo</option>
+				<option value="vivo">Vivo</option>
+			</select>
+		</div>
+		<div>
+			<label for="age">Age*</label>
+			<input type="number" id="age" name="age" required>
+		</div>
+		<div>
+			<label for="dob">DOB*</label>
+			<input type="date" id="dob" name="dob"required>
+		</div>
+		<div>
+			<label for="password">Password*</label>
+			<input type="password" id="password" name="password" required>
+		</div>
+		<div>
+			<label for="portfolio">Portfolio*</label>
+			<input type="url" id="portfolio" name="portfolio"required>
+		</div>
+		<div>
+			<button>submit button</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
