--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
 			<input type="url" id="portfolio" name="portfolio"required>
 		</div>
 		<div>
-			<button>submit button</button>
+			<button type="submit">submit button</button>
 		</div>
 	</form>
     <script type="text/javascript" src="./script.js">
